Re-organize API file structure and naming
