# API/src/yeti_transactions_api.py
@@ -3,21 +3,40 @@ import json
 from boto3.dynamodb.conditions import Key
 from botocore.exceptions import ClientError
 
-import api_response as api_response
-from dynamodb import transactions_table
-from utils import replace_decimals
-from auth import LoginAuthorizer
-import constants as constants
+import yeti_api_response as api_response
+from yeti_dynamodb import transactions_table
+from yeti_common_utils import replace_decimals
+from yeti_auth_authorizers import LoginAuthorizer
+import yeti_constants as constants
+import yeti_email_service
+import traceback
+import datetime
+
 
 logger = logging.getLogger()
 logger.setLevel(logging.INFO)
 
 
 def load_transactions(event, context):
-    print(event)
     error_response, login_email = LoginAuthorizer.auth_non_login_event(event)
     if error_response is not None:
         return error_response
+
+    logger.info("Loading transactions for {}".format(login_email))
+
+    try:
+        logger.info("Checking access token validity")
+        access_token, expiration = yeti_email_service.get_access_token_for_email(login_email)
+        if expiration > datetime.datetime.now().timestamp():
+            logger.info("Access token expired. Trying to refresh")
+            # TODO: Call Refresh token service
+
+        logger.info("Load and transform emails")
+        yeti_email_service.transform_emails_util(access_token, login_email)
+    except Exception as e:
+        print(traceback.format_exc())
+        logger.error("Error transforming emails: {}".format(e))
+        return api_response.internal_error("Error transforming emails: {}".format(e))
 
     # Only return transactions sent to the login email
     filter_expression = Key('UserEmail').eq(login_email)
