# API/swagger/swagger.yml
@@ -355,69 +355,6 @@ paths:
               type: "string"
             Access-Control-Allow-Origin:
               type: "string"
-  /email/transform:
-    get:
-      tags:
-        - "email"
-      parameters:
-        - name: "login-email"
-          in: "header"
-          description: "The login email associated with the access token"
-          required: true
-          type: "string"
-        - name: "Authorization"
-          in: "header"
-          description: "A JWT token that authenticates and authorizes the user. "
-          required: true
-          type: "string"
-      responses:
-        200:
-          description: "Successful request"
-        400:
-          description: "Client-side error (Authorization token not set / invalid)"
-        500:
-          description: "Server-side error"
-      x-amazon-apigateway-integration:
-        uri: arn:aws:apigateway:us-west-2:lambda:path/2015-03-31/functions/arn:aws:lambda:us-west-2:917309224575:function:YetiApi-TransformEmails/invocations
-        httpMethod: POST
-        type: aws_proxy
-    options:
-      summary: CORS support
-      description: |
-        Enable CORS by returning correct headers
-      consumes:
-        - application/json
-      produces:
-        - application/json
-      tags:
-        - CORS
-      x-amazon-apigateway-integration:
-        type: mock
-        requestTemplates:
-          application/json: |
-            {
-              "statusCode" : 200
-            }
-        responses:
-          "default":
-            statusCode: "200"
-            responseParameters:
-              method.response.header.Access-Control-Allow-Headers : "'Content-Type,X-Amz-Date,Authorization,X-Api-Key'"
-              method.response.header.Access-Control-Allow-Methods : "'*'"
-              method.response.header.Access-Control-Allow-Origin : "'*'"
-            responseTemplates:
-              application/json: |
-                {}
-      responses:
-        200:
-          description: Default response for CORS method
-          headers:
-            Access-Control-Allow-Headers:
-              type: "string"
-            Access-Control-Allow-Methods:
-              type: "string"
-            Access-Control-Allow-Origin:
-              type: "string"
 
 definitions:
   OutlookOAuthRequestBody:
